@@ -1,16 +1,14 @@
 package com.kbc.java17.practice.iostreams;
 
 import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.attribute.BasicFileAttributes;
 
 public class TestIOStreams10 {
     public static void main(String... unused) throws IOException {
-        var p = Paths.get("C:\\tmp\\sloth.schedule");
-        var a = Files.readAttributes(p, BasicFileAttributes.class);
-        Files.createDirectory(p.resolve(".backup"));
+        Path path1 = Path.of("./practice");
+        Path path2 = Path.of("Reading/Java/Java17");
+        System.out.println(path1.relativize(path2));
+        System.out.println(path2.relativize(path1));
     }
 
 }
